# gnome-pilot

./: Makefile  README.md
src/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  gnome-pilot-2.0.pc.in  gnome-pilot.spec  gnome-pilot.spec.in
src/applet/: GNOME_PilotApplet.server.in.in  Makefile.am  Makefile.in  gpilot-applet-progress-private.h  gpilot-applet-progress.c  gpilot-applet-progress.gob  gpilot-applet-progress.h  pilot.c  pilot.schemas.in
src/capplet/: Makefile.am  Makefile.in  gnome-pilot-capplet.c  gnome-pilot-capplet.h  gnome-pilot-cdialog.c  gnome-pilot-cdialog.h  gnome-pilot-ddialog.c  gnome-pilot-ddialog.h  gnome-pilot-druid.c  gnome-pilot-druid.h  gnome-pilot-pdialog.c  gnome-pilot-pdialog.h  gpilotd-control-applet.c  gpilotd-control-applet.desktop.in.in  pilot.c  pilot.h  util.c  util.h
src/conduits/: Makefile.am  Makefile.in
src/conduits/backup/: Makefile.am  Makefile.in  backup.conduit.in  backup_conduit.c  backup_conduit.h
src/conduits/file/: Makefile.am  Makefile.in  file.conduit.in  file_conduit.c  file_conduit.h  gpilot_install_file.c  palm.keys
src/conduits/test/: Makefile.am  Makefile.in  test.conduit.in  test_conduit.c
src/gpilot-fileman/: OChangeLog
src/gpilotd/: GNOME_Pilot_Daemon.server.in.in  Makefile.am  Makefile.in  gnome-pilot-client-private.h  gnome-pilot-client.c  gnome-pilot-client.gob  gnome-pilot-conduit-backup-private.h  gnome-pilot-conduit-backup.c  gnome-pilot-conduit-backup.gob  gnome-pilot-conduit-config.gob  gnome-pilot-conduit-file-private.h  gnome-pilot-conduit-file.c  gnome-pilot-conduit-file.gob  gnome-pilot-conduit-management.gob  gnome-pilot-conduit-private.h  gnome-pilot-conduit-standard-abs.c  gnome-pilot-conduit-standard-private.h  gnome-pilot-conduit-standard.c  gnome-pilot-conduit-standard.gob  gnome-pilot-conduit-sync-abs.c  gnome-pilot-conduit.c  gnome-pilot-conduit.gob  gnome-pilot-structures.c  gpilot-gui.c  gpilot-gui.h  gpilotd-conduit-mgmt.h  gpilotd-session-wrapper.c  gpilotd.c  gpmarshal.c  gpmarshal.h  gpmarshal.list  manager.c  orbit_daemon_glue.c  orbit_daemon_glue.h  queue_io.c
src/help/: Makefile.in
src/help/C/: Makefile.am  Makefile.in  gnome-pilot-C.omf
src/idl/: Makefile.am  Makefile.in  OChangeLog
src/libgpilotdCM/: OChangeLog  gnome-pilot-conduit-config-private.h  gnome-pilot-conduit-config.c  gnome-pilot-conduit-management-private.h  gnome-pilot-conduit-management.c
src/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  cs.po  da.po  de.po  es.po  eu.po  fr.po  gl.po  hu.po  it.po  nb.po  pt_BR.po  ru.po  sv.po  zh_CN.po
src/utils/: Makefile.am  Makefile.in  gpilotd-client.c  gpilotdcm-client.c  make-password.c
